# bifidotyper

./: .gitignore  MANIFEST.in  README.md  changelog.md  env.yaml  pyproject.toml  setup.py  test_runs.sh
conda/: meta.yaml
data/reference/: CP001095.1_coding_seqs.gb
database/: drep_all_dbs.sh  parse_stb.py  process_gtdb.sh  process_ncbi.sh  sylph_example_run.sh
src/: bifidotyper.py  test_bifidotyper.py
src/bifidotyper/: __init__.py  cli.py  hmo_genes.py  logger.py  phylogenetic.py  plotting.py  processor.py  references.py  sylph.py
src/bifidotyper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/bifidotyper/data/reference/: CP001095.1_gene_sequences.fasta  CP001095.1_genes.gff3  CP001095.1_genome.fasta  genomes.csv
src/data/reference/: genome_colors.csv  get_gene_sequences.sh
src/data/reference/genomes_ncbi_gtdb_drep95/: labels.txt
src/util/: recreate_sylph_genome_db.sh  update_bifidotyper_genomes_csv.py
